move the Checkstyle analysis to the 'reporting' section